--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "Heavenss",
+  "name": "Heavens",
   "version": "1.0.0",
-  "description": "Heavenss webpage",
+  "description": "Heavens webpage",
   "main": "index.js",
   "scripts": {
     "watch:sass": "node-sass sass/main.scss css/style.css -w",
@@ -12,7 +12,7 @@
     "compress:css": "node-sass css/style.prefix.css css/style.css --output-style compressed",
     "build:css": "npm-run-all compile:sass prefix:css compress:css"
   },
-  "author": "Jonas",
+  "author": "Marko",
   "license": "ISC",
   "devDependencies": {
     "autoprefixer": "^10.4.16",
